--- a/css/viagens.css
+++ b/css/viagens.css
@@ -66,6 +66,7 @@ body {
     width: 500px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow-y: auto;
+    
 }
 
 .modal-contentt p {
@@ -112,6 +113,8 @@ body {
     color: #555;
     margin-bottom: 5px;
 }
+
+
 
 .form-group input,
 .form-group select {
@@ -296,7 +299,8 @@ h2 {
 }
 
 #detalhesViagem {
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: 400;
     line-height: 1.5;
 }
 
@@ -321,3 +325,17 @@ h2 {
     background-color: #c0392b;
     transform: translateY(-2px);
 }
+
+input{
+    height: 13px;
+     width: 130px;
+     border: none;
+     font-weight: 400;
+     border-bottom: 1px solid var(--preto);
+     background-color: var(--branco);
+     padding-left: 10px;
+     font-size: 15px;
+     outline: 0;
+     color: var(--preto);
+    }
+
