--- a/css/detalhesMotorista.css
+++ b/css/detalhesMotorista.css
@@ -1,10 +1,16 @@
 /* Estilos gerais */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
+    background-image: url('../css/img/background.PNG');
+    background-repeat: no-repeat; /* Impede a repetição da imagem */
+    background-size: cover; /* Faz com que a imagem ocupe toda a tela */
+    background-position: center; /* Centraliza a imagem */
+    font-family: Nunito;
 }
+
 
 /* Cabeçalho */
 .header {
@@ -41,7 +47,7 @@ body {
 
 /* Conteúdo principal */
 .container {
-    max-width: 800px;
+    max-width: 600px;
     margin: 30px auto;
     background: #fff;
     padding: 20px;
@@ -55,9 +61,9 @@ body {
 }
 
 .profile .driver-photo {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+    width: 250px;
+    height: 200px;
+    border-radius: 20%;
     margin-bottom: 10px;
 }
 
@@ -68,12 +74,12 @@ body {
 }
 
 .profile h1 {
-    font-size: 24px;
+    font-size: 34px;
     margin: 10px 0;
 }
 
 .profile p {
-    font-size: 14px;
+    font-size: 18px;
     color: #555;
 }
 
@@ -112,3 +118,4 @@ body {
 .add-team:hover {
     background-color: #ddd;
 }
+
