--- a/css/viagens.css
+++ b/css/viagens.css
@@ -110,7 +110,8 @@ body {
 
 .form-group label {
     font-size: 14px;
-    color: #555;
+    color: #000000;
+    font-weight: 900;
     margin-bottom: 5px;
 }
 
@@ -120,8 +121,8 @@ body {
 .form-group select {
     padding: 10px;
     font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 1px solid #9c9c9c;
+    border-radius: 2px;
 }
 
 .form-group button {
@@ -328,7 +329,6 @@ h2 {
 
 input{
     height: 13px;
-     width: 130px;
      border: none;
      font-weight: 400;
      border-bottom: 1px solid var(--preto);
